# Point2Skeleton

./: .env  .gitignore  Makefile  README.md  pyproject.toml
src/: FileRW.py  GraphAE.py  config.py  train.py
src/pointnet2/: main.py  pyproject.toml  setup.py
src/pointnet2/_ext-src/src/: ball_query.cpp  group_points.cpp  interpolate.cpp  sampling.cpp  utils.h
src/pointnet2/utils/etw_pytorch_utils/: persistent_dataloader.py
