[build-system]
requires = ["setuptools", "wheel", "torch", "numpy"] 
build-backend = "setuptools.build_meta"

[project]
name = "pointnet2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch", 
    "setuptools", 
    "h5py", 
    "future",
    "tqdm",
    "numpy",
    "scipy",
    "visdom"
]
